ecmascript/parser/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d/input.ts.stderr
error[1183]: An implementation cannot be declared in ambient contexts
 --> $DIR/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d/input.ts:2:28
  |
2 |     abstract constructor() {}
  |                            ^

error[1242]: `abstract` modifier can only appear on a class or method declaration
 --> $DIR/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d/input.ts:2:5
  |
2 |     abstract constructor() {}
  |     ^^^^^^^^

